[n] Апи роут для получения списка меню
