# web/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\MenuApiController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\LanguageApiController;
@@ -22,3 +23,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get('/translations/{locale?}', [LocalizationController::class, 'translations']);
 Route::apiResource('languages', LanguageApiController::class)->only(['index']);
+Route::apiResource('menus', MenuApiController::class)->only(['index']);
